--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "homepage": "./",
   "dependencies": {
     "@react-three/drei": "^9.78.1",
     "@react-three/fiber": "^8.13.4",
@@ -19,6 +20,7 @@
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
+    "serve": "^14.2.0",
     "styled-components": "^6.0.3",
     "three": "^0.154.0",
     "three-stdlib": "^2.23.13",
